@@ -3,7 +3,7 @@
 # GrovePi Python library
 # v1.2.2
 #
-# This file provides the basic functions for using the GrovePi
+# This file provides the basic functions for using the GrovePi.
 #
 # The GrovePi connects the Raspberry Pi and Grove sensors.  You can learn more about GrovePi here:  http://www.dexterindustries.com/GrovePi
 #
