@@ -1,4 +1,5 @@
-//GrovePi Example for using the analog write 
+// GrovePi Example for using the analog write 
+// http://dexterindustries.com/grovepi
 #include "grovepi.h"
 //gcc grovepi_analog_write.c grovepi.c -Wall
 int main(void)
